ingress/nexus-registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-registry-ingress
  namespace: nexus
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: nexus-registry.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus-registry
                port:
                  number: 64395
