ingress/schema-registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: schema-registry-ingress
  namespace: green-energy-tracker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: green.energy.tracker.schema-registry
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: schema-registry-service
                port:
                  number: 8085
